# paperherms

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  scripts_download_medseg.py  scripts_download_medseg_fast.py  scripts_import_medseg.py
agent_core/: __init__.py  chains.py  graph.py  llm.py  nodes.py  state.py
backend/: __init__.py  config.py  main.py  schemas.py
backend/api/: agent_tasks.py  memories.py  papers.py  skills.py
backend/db/: models.py  session.py
backend/services/: agent_service.py  bandit_service.py  (+8 more)
evaluator/: agent_eval.py  memory_eval.py  rag_eval.py  summary_eval.py
examples/: README.md  evaluation_cases.jsonl  sample_paper_metadata.json  training_source.jsonl
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
models/: README.md
rag/: __init__.py  models.py
scripts/: package-docker-deploy.ps1  start-backend.ps1  start-frontend.ps1
tests/: test_bandit_service.py  test_reward_service.py  test_training_pipeline.py
tools/: __init__.py  analyze_experiments.py  analyze_limitations.py  analyze_method.py  analyze_novelty.py  compare_papers.py  extract_captions.py  extract_metadata.py  extract_sections.py  generate_presentation_outline.py  generate_reading_notes.py  generate_related_work.py  llm_client.py  parse_pdf.py  search_memory.py  search_paper.py  summarize_paper.py  write_memory.py
training/: README.md  __init__.py  dataset_builder.py  evaluate.py  export_training_source.py  merge_adapter.py  train_dpo.py  train_sft.py
(+31 files in other folders)
