[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperhermes"
version = "0.1.0"
description = "PaperHermes research paper assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.18",
  "python-multipart>=0.0.9",
  "PyMuPDF>=1.24.0",
  "qdrant-client>=1.9.0",
  "httpx>=0.27.0",
  "numpy<2",
  "openai>=1.0.0",
  "scikit-learn>=1.5.0",
  "torch>=2.0.0",
  "transformers>=4.41.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain>=0.3.0",
  "langgraph>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "agent_core*", "rag*", "tools*", "evaluator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
